0221: Quick first attempt at TTIHP0p2

--- a/0217-2024-09-29.md
+++ b/0217-2024-09-29.md
@@ -24,6 +24,7 @@
 *   External clock, or user_clock2
 *   Game map in CUP memory
 *   Memory banking
+*   Proper COLUMN rendering in framebuffer RAM instead of JIT ROW rendering -- but this wouldn't work with SPI texture ROM unless it was cached in RAM too.
 *   Use Caravel's SPI passthrough port ("flash2" on `IO[37:36,11:8]`) to allow for Flash ROM rewriting via HKSPI.
 *   Texture flip options: X and/or Y
 *   Output internal reset signal as ext. pin to help debug sync
