--- a/0221-2024-10-11.md
+++ b/0221-2024-10-11.md
@@ -4,4 +4,80 @@
 |-|-|
 | [**0220**-2024-10-11.md](./0220-2024-10-11.md) | *Next journal TBA* |
 
-# 
+# Quick first attempt at TTIHP0p2
+
+TT Discord channel [`#ttihp0p2-tapeout`](https://discord.com/channels/1009193568256135208/1290548711075741796) discusses an experimental IHP PDK tapeout open for contributions, following the closed [tinytapeout-ihp-0p1](https://github.com/TinyTapeout/tinytapeout-ihp-0p1) tapeout. I was lucky to have [TT07's raybox-zero selected](https://github.com/TinyTapeout/tinytapeout-ihp-0p1/tree/main/projects/tt_um_algofoogle_raybox_zero) for that earlier one.
+
+I used [ttihp-verilog-template](https://github.com/TinyTapeout/ttihp-verilog-template) to try creating a couple of projects...
+
+
+## solo-squash for TTIHP0p2
+
+I replicated my simple solo-squash Pong-like VGA game as submitted to TT03p5: https://github.com/algofoogle/ttihp-solo-squash -- it [seems to harden fine](https://github.com/algofoogle/ttihp-solo-squash/actions/runs/11308698839) via the GHAs.
+
+**I need to [implement tests](https://github.com/TinyTapeout/ttihp-verilog-template/tree/main/test) and have a mode option to select between "classic", TinyVGA Pmod, and potentially other output modes.**
+
+NOTE: This flow uses ORFS instead of OpenLane. Might also be incomplete from a TT standpoint (e.g. no GL sim yet, at least not in GHA?). Here's what I did to set it up:
+
+*   Fork https://github.com/TinyTapeout/ttihp-verilog-template => https://github.com/algofoogle/ttihp-solo-squash
+*   Settings => Pages => Source: GitHub Actions
+*   Actions => Enable
+*   Clone to my VM in `~/projects/ttihp-solo-squash`
+*   NOTE: Last time I submitted to TT it was TT03p5 (and it included the [lzc test](https://github.com/algofoogle/tt03p5-solo-squash/blob/7521bb47e1730e20988039a5294c66ee08340811/src/top.v#L54)) but since then I've also submitted to GF180. Need to compare code versions: [tt03p5](https://github.com/algofoogle/tt03p5-solo-squash/tree/main/src) & [GF180](https://github.com/algofoogle/algofoogle-multi-caravel/tree/gf180/verilog/rtl/solo_squash/src) are static copies, but there's also solo-squash-caravel-v2 which [has it as a submodule](https://github.com/algofoogle/solo-squash-caravel-v2/tree/main-gfmpw1/verilog/rtl).
+*   For now, I'll add the (currently) latest commit of [solo_squash](https://github.com/algofoogle/solo_squash) as a submodule...
+    ```bash
+    cd src
+    git submodule add https://github.com/algofoogle/solo_squash
+    ```
+*   I'll also add a copy of [lzc_fast.v](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/lzc_fast.v) and then use [top.v](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/top.v) as taken from tt03p5.
+*   I merged `top.v` into `project.v`. NOTE: Original top.v uses `` `timescale `` but project.v does not.
+*   **DON'T FORGET:** Need to make the VGA pinout (and possibly audio) match TT standards (e.g. TinyVGA).
+*   Update `info.yaml`, *mostly* transposed from tt03p5 version.
+*   Update README a little.
+*   Update `docs/info.md`
+*   In `project.v`, make sure unused inputs are referenced to suppress warnings.
+
+### Notes
+
+[`test`](https://github.com/algofoogle/ttihp-solo-squash/actions/runs/11308698840) action failed but [`gds`](https://github.com/algofoogle/ttihp-solo-squash/actions/runs/11308698839) and [`docs`](https://github.com/algofoogle/ttihp-solo-squash/actions/runs/11308698838) passed.
+
+Utilisation of 1x1 tile is ~32%.
+
+This is in the `gds` action:
+```
+Extracting clock period from SDC file: /home/runner/work/ttihp-solo-squash/ttihp-solo-squash/runs/wokwi/results/ihp-sg13g2/tt-submission/base/clock_period.txt
+Setting clock period to 20000
+```
+
+Is that 20ns? Where does it come from?
+
+This warning is also shown in the GDS summary page, but I assume we can ignore this:
+```
+Warning: Found unsupported expression 'SCE*SCD+SCE'*D' in pin attribute of cell 'sg13g2_sdfbbp_1' - skipping.
+```
+
+
+## raybox-zero for TTIHP0p2
+
+I tried to [put the TT07 version of raybox-zero into the template](https://github.com/algofoogle/ttihp0p2-algofoogle/tree/rbz) (note: `rbz` branch of that repo). I can get it to harden, but it fails DRC -- evidently a [bug](https://discord.com/channels/1009193568256135208/1295436096305369088/1295466872363421776) (maybe in ORFS) to do with Metal2 area being too small in some cases.
+
+I should file a bug with a reproducible, but not sure how to do that yet.
+
+I was hardening at 6x2. I managed to get the flow to run locally and I got it to just barely harden successfully in 4x2 tiles with a `PLACE_DENSITY` of 0.78.
+
+Getting the flow to run locally took a little fiddling, and one thing I recall was doing `sudo apt install python3-tk`. Here's the `ttihp-env.sh` file I ended up creating in the repo dir:
+
+```bash
+#!/bin/bash
+
+export FLOW=orfs
+export FLOW_ARG=--orfs
+export IHP_PDK_ROOT=/home/anton/ttsetup@tt09-ihp/pdk
+export IHP_PDK_COMMIT=69c58d9ba56d8894c1499b2dd2689f5e22692704
+export ORFS_ROOT=/home/anton/ttsetup@tt09-ihp/orfs
+export ORFS_COMMIT=ad1c669e5bfaf57b2b6e9c017c7255182d461190
+export OPENROAD_EXE=/usr/bin/openroad
+export YOSYS_EXE=/home/anton/ttsetup@tt09-ihp/oss-cad-suite/bin/yosys
+source /home/anton/ttsetup@tt09-ihp/venv/bin/activate
+```
+
