Rough updates for 0224 re Analog Discovery 3 and opamp test board

--- a/0223-2024-11-12.md
+++ b/0223-2024-11-12.md
@@ -6,6 +6,7 @@
 
 # Ideas for future raybox-zero versions
 
+*   Flipped mode -- draw textures bottom-to-top, or even flip the whole casting algorithm.
 *   Maybe RGB333 or RGB444 output?
 *   Dithered distance dimming?
 *   Double-rez mode: For gen_tex only, since extra time is required for texture SPI reads otherwise, but there are probably ways around this including RGB222 6-bit packing (instead of 8-bit) and having blanking marigns during which there is extra time for SPI reads.
