0225: Initial tt06-grab-bag Analog VGA bring-up

--- a/0224-2024-12-05.md
+++ b/0224-2024-12-05.md
@@ -2,34 +2,43 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0223**-2024-11-12.md](./0223-2024-11-12.md) | *Next journal TBA* |
+| [**0223**-2024-11-12.md](./0223-2024-11-12.md) | [**0225**-2025-01-12.md](./0225-2025-01-12.md) |
+
+# Rough notes for RBZ and TT06 Analog VGA testing prep
+
+Through Nov and Dec I worked on some raybox-zero ("RBZ") design upgrades, and started preparing for the arrival of TT06 with my tt06-grab-bag project (analog VGA driver experiment). I also got a Digilent Analog Discovery 3 and started learning the basics of it. 
+
+Because my TT06 project should produce analog (DAC) outputs in the range of 0 to 1.8V, but with a fairly weak signal, I need a solution to buffer it -- both to boost it, but also to protect the on-chip circuit. I spent some time learning about opamps, got a few samples, and did some simulations in KiCad (which internally uses ngspice) of what I hope will be an adequate circuit.
+
+I haven't documented the full details yet, but my amplifier designs can at least be found in https://github.com/algofoogle/sandpit/tree/master/opamp -- currently a Private repo only, but if requested I can arrange to share these details. Note that I ended up selecting the TI OPA3355.
+
+More documentation to come, but below is my ever-growing list of stuff I want to get done soon (while other things have dropped off the list).
 
 
+## TODO V2
 
-# TODO V2
-
-*   Create symbol for my RP2040 board (`sandpit/pcb/kicad/RP2040/rp2040_pcba_test`) showing its IOs, buttons/headers and LEDs
-*   Create schematic for GFMPW-1 hookup inc. RP2040 and TinyVGA
-*   Write "game" code for PC control of GFMPW-1, also TT07
-*   Write RP2040 (uPython or C) code to move "smartly" between random map locations as a cooler demo
-*   Design/simulate opamp & VGA connector board for TT06, later TT08
-*   Update rbz repo with WB extensions, and improve register access instantiation
-*   Document rbz_options
-*   Document CI2409 RBZ
-*   Document CI2411 RBZ variants, esp. WB
-*   Test other GFMPW-1 designs
-*   GFMPW-1 clocked by RP2040 -- try different clock speeds
-*   Unexpected SPI overloading behaviour; doesn't stall SPI counter as it should?
-    *   Compare reg SPI (over)load: https://github.com/algofoogle/algofoogle-multi-caravel/blob/gf180/verilog/rtl/raybox-zero-fsm/src/rtl/spi_registers.v
-    *   Compare vec SPI (over)load
-    *   Compare versions (TT04 and CI2311 work OK with both overloading??? Or maybe the don't: MicroPython SoftSPI maybe sends exact bits? Don't think so).
-    *   Try a GFMPW vec SPI regular load, vs. overload
-    *   Do a simulation of SPI loading & check VCD
-*   Document TT08 submission for analog review
-*   Try to get TT09 ring osc extraction/simulation to work
+- [x] Create symbol for my RP2040 board (`sandpit/pcb/kicad/RP2040/rp2040_pcba_test`) showing its IOs, buttons/headers and LEDs
+- [ ] Create schematic for GFMPW-1 hookup inc. RP2040 and TinyVGA
+- [ ] Write "game" code for PC control of GFMPW-1, also TT07
+- [ ] Write RP2040 (uPython or C) code to move "smartly" between random map locations as a cooler demo
+- [x] Design/simulate opamp & VGA connector board for TT06, later TT08
+- [ ] Update rbz repo with WB extensions, and improve register access instantiation
+- [ ] Document rbz_options
+- [ ] Document CI2409 RBZ
+- [ ] Document CI2411 RBZ variants, esp. WB
+- [ ] Test other GFMPW-1 designs
+- [ ] GFMPW-1 clocked by RP2040 -- try different clock speeds
+- [ ] Unexpected SPI overloading behaviour; doesn't stall SPI counter as it should?
+      *   Compare reg SPI (over)load: https://github.com/algofoogle/algofoogle-multi-caravel/blob/gf180/verilog/rtl/raybox-zero-fsm/src/rtl/spi_registers.v
+      *   Compare vec SPI (over)load
+      *   Compare versions (TT04 and CI2311 work OK with both overloading??? Or maybe the don't: MicroPython SoftSPI maybe sends exact bits? Don't think so).
+      *   Try a GFMPW vec SPI regular load, vs. overload
+      *   Do a simulation of SPI loading & check VCD
+- [ ] Document TT08 submission for analog review
+- [ ] Try to get TT09 ring osc extraction/simulation to work
 
 
-# Testing opamp circuit before TT06 arrival
+## Testing opamp circuit before TT06 arrival
 
 *   Simulate devices that have usable SPICE models (e.g. from TI) -- Create warpper SPICE as required for multi-devices.
 *   Generate high-impedance 0-1.8V analog signal from AD3:
