Add more detail to 0226

--- a/0226-2025-02-20.md
+++ b/0226-2025-02-20.md
@@ -6,11 +6,17 @@
 
 # tt06-grab-bag Analog VGA works!
 
+> [!NOTE]
+> Watch [my video segment on Matt Venn's TT06 Bring-up Party](https://www.youtube.com/watch?v=UnpSEdZgYKs&t=3381s) if you'd like a quick overview, then come back here for more details.
+
+Video projects on Tiny Tapeout custom ASICs (custom silicon chips) have typically been limited to digital 6-bit colour (RGB222, or 64 distinct colours). Some have gone up to 12-bit colour (RGB444, or 4096 distinct colours) but this uses a lot of the limited IO pins. I wanted to create a design that could potentially drive more like 18-bit (RGB666) or ideally 24-bit colour (RGB888, millions of colours) by using 3 analog pins only. My Tiny Tapeout 6 submission, "[TT06 Grab Bag](https://tinytapeout.com/runs/tt06/tt_um_algofoogle_tt06_grab_bag)", gets close to accomplishing that.
+
+
 ![tt06-grab-bag prototype PCB working](./i/0226-prototype-working.jpg)
 
-In April 2024 I submitted my first analog VLSI design to Tiny Tapeout 6 (as part of the [Zero to ASIC Analog Course](https://www.zerotoasiccourse.com/analog/)) and after about 9 months of waiting for the fabricated chip to arrive I've been able to prove that the design works pretty well as intended: It generates high-colour-depth 640x480 VGA output by producing on-chip analog video signals.
+In April 2024 I submitted "TT06 Grab Bag" ([GitHub link](https://github.com/algofoogle/tt06-grab-bag)) -- my first analog VLSI design -- to Tiny Tapeout 6 (as part of the [Zero to ASIC Analog Course](https://www.zerotoasiccourse.com/analog/)) and after about 9 months of waiting for the fabricated chip to arrive I've been able to prove that the design works pretty well as intended: It generates high-colour-depth 640x480 VGA output by producing on-chip analog video signals.
 
-The design implements a simple VGA driver demonstration that generates analog outputs for each of the Red, Green, and Blue channels. It does this using 3&times; RDACs (resistive, R2R DACs). It's a mixed-signal design in that it includes a digital control block that can be directed to produce a few different test patterns as 24-bit outputs (8 bits per colour channel) and feeds them into the on-chip R2R ladders.
+The design implements a simple VGA driver demonstration that generates analog outputs for each of the Red, Green, and Blue channels. It does this using 3&times; RDACs (resistive DACs, i.e. using an R2R ladder). It's a mixed-signal design in that it includes a digital control block that can be directed to produce a few different test patterns as 24-bit outputs (8 bits per colour channel) and feeds them into the on-chip R2R ladders.
 
 Due to Tiny Tapeout limitations, my project relies on external op-amps to buffer the analog outputs, and also to scale their 0-1.8V range down to 0-0.7V.
 
@@ -31,6 +37,8 @@ I started with a simple 8-bit R2R DAC schematic inspired by [Matt Venn's example
 ## Digital block
 
 I used OpenLane to independently harden a simple [digital control block implemented in Verilog](https://github.com/algofoogle/tt06-grab-bag/blob/main/verilog/controller.v). This produced a GDS macro that I was then later able to place into the Tiny Tapeout analog template and wire up with the digital IOs, the power rails, and with my analog layout blocks.
+
+![Digital block GDS over a Verilog snippet](./i/0226-digital-block.png)
 
 The digital block generates all the VGA timing (including HSYNC and VSYNC) from a 25.175MHz clock source, though for simplicity I assume 25.000MHz (which is OK too) and thus 40ns per pixel. Besides doing external RGB222 output via `uo_out` to be compatible with the [Tiny VGA PMOD](https://github.com/mole99/tiny-vga), it also generates internal digital signals that are 8bpp (bits per pixel) per each of the RGB (Red, Green, Blue) colour channels that become the inputs to 3 instances of the DACs.
 
@@ -58,7 +66,7 @@ I then created the layout of a single R2R DAC cell, and placed 3 instances of it
 
 ![Completed render of layout in Magic](./i/0226-mag-render.png)
 
-Amazingly, I got LVS to pass pretty quickly, which was reassuring.
+Amazingly, I got LVS to pass pretty quickly, which was reassuring. A Verilog black-box model was used to define all instances of the DACs and their connections, as the design's top-level "schematic" (netlist) input for LVS.
 
 I then used Matt Venn's example Makefile to do parasitic extraction of a SPICE netlist from the layout, and I was able to simulate it (see below).
 
@@ -109,6 +117,11 @@ In any case, after reworking the boards I had on hand, I was able to get the sle
 
 ![Channel slews compared on oscilloscope](./i/0226-slews.jpg)
 
+Comparing the screen captures from the original amp board and the new amp board shows the notable improvement in quality:
+
+![Smeared original capture vs. improved new amp capture](./i/0226-smears.jpg)
+
+
 
 ## Interposer board
 
@@ -121,4 +134,3 @@ For a nicer and more-permanent solution with (hopefully) even better performance
 
 *   Link to the repo
 *   Notes on unmatched buffer cells
-*   Matt's bring-up party video: https://www.youtube.com/watch?v=UnpSEdZgYKs&t=3381s
