Update more stuff for 0226 re tt06-grab-bag

--- a/0226-2025-02-20.md
+++ b/0226-2025-02-20.md
@@ -36,7 +36,7 @@ I started with a simple 8-bit R2R DAC schematic inspired by [Matt Venn's example
 
 ## Digital block
 
-I used OpenLane to independently harden a simple [digital control block implemented in Verilog](https://github.com/algofoogle/tt06-grab-bag/blob/main/verilog/controller.v). This produced a GDS macro that I was then later able to place into the Tiny Tapeout analog template and wire up with the digital IOs, the power rails, and with my analog layout blocks.
+I [used OpenLane to independently harden](https://github.com/algofoogle/tt06-grab-bag/tree/main/openlane/controller) a simple [digital control block implemented in Verilog](https://github.com/algofoogle/tt06-grab-bag/blob/main/verilog/controller.v). This produced a GDS macro that I was then later able to place into the Tiny Tapeout analog template and wire up with the digital IOs, the power rails, and with my analog layout blocks.
 
 ![Digital block GDS over a Verilog snippet](./i/0226-digital-block.png)
 
@@ -104,7 +104,7 @@ My on-chip circuit produces analog outputs that are 0-1.8V and about 10k impedan
 
 ![VGA amp protoboard](./i/0226-first-try.jpg)
 
-With lots of [great tips from Sylvain Munaut](https://discord.com/channels/1009193568256135208/1328617914588332042) I was able to make a much better board by doing the following:
+With lots of [great tips from Sylvain Munaut](https://discord.com/channels/1009193568256135208/1328617914588332042) I was able to make a much better board (as seen at the start of this article) by doing the following:
 *   Getting rid of U.FL/coaxial cables; they add a lot of extra capacitive load. I replaced them with simple short wires.
 *   Using another OPA3355-based prototyping PCB I'd had fabbed for this project, which arrived shortly after my initial experiments.
 *   Using a pull-down resistor on the op-amp input side to effectively get lower impedance and hence a faster slew rate from the ASIC (despite a lower output voltage range and hence more noise).
@@ -112,6 +112,8 @@ With lots of [great tips from Sylvain Munaut](https://discord.com/channels/10091
 *   In turn, this meant I could use a simple impedance-matched feedback network to set the gain on the now-lower output range, to get it up to 0-0.7V and 75&ohm; impedance.
 
 Note also that my scope probe introduced a lot of extra load on the input-side signals when I was trying to measure them.
+
+TODO: New schematic screenshot.
 
 In any case, after reworking the boards I had on hand, I was able to get the slews right down. This scope screenshot shows the unmodified CH2 (blue) with ~800ns slew, compared with the improved CH1 (yellow) at about ~68ns (though I was later getting closer to about 100ns):
 
@@ -125,12 +127,103 @@ Comparing the screen captures from the original amp board and the new amp board 
 
 ## Interposer board
 
-For a nicer and more-permanent solution with (hopefully) even better performance and no hacking of the TT06 carrier board, I created an "[interposer board](https://github.com/algofoogle/tt06-grab-bag/tree/main/pcb/tt06-vga-interposer)" (aka "sandwich board") that slots in between the TT06 carrier and TT06 demo boards, and implements the ideal op-amp circuit and provides the VGA connector directly and with a better layout.
+For a nicer and more-permanent solution with (hopefully) even better performance and no hacking of the TT06 carrier board, I created an "[interposer board](https://github.com/algofoogle/tt06-grab-bag/tree/main/pcb/tt06-vga-interposer)" (aka "sandwich board"); [view schematics online](https://kicanvas.org/?github=https%3A%2F%2Fgithub.com%2Falgofoogle%2Ftt06-grab-bag%2Fblob%2Fmain%2Fpcb%2Ftt06-vga-interposer%2Ftt06-vga-interposer.kicad_sch). It slots in between the TT06 carrier and TT06 demo boards, and implements the ideal op-amp circuit and provides the VGA connector directly and with a better layout.
+
+![Interposer board design](i/0226-ip1.jpg)
+
+Its main features are:
+*   It takes 3.3V power from the `vdda_in` pin of the TT06 demo board; this supply is for the OPA3355 op-amp, and for the optional HSYNC/VSYNC buffer -- the latter of which I didn't bother populating and instead bypassed because it doesn't seem to be needed for modern monitors, though I did put 1k resistors in series for both so no more than ~3.3mA is drawn from the chip per digital output pin.
+*   It redirects the analog pins that are used by my design, so they don't connect to the base demo board.
+*   There are jumper pins allowing for the RGB chip outputs to be remapped to VGA channel inputs.
+*   It's all neatly integrated, and includes a few other test/debug footprints if required.
+
+I tested it with a 2nd (unmodified) TT06 board and it works like a charm.
+
+![Interposer board in operation](i/0226-ip2.jpg)
+
+The actual performance is about the same, i.e. on the order of 100ns slew rate. Notice also that the lowest video level is about 80-100mV:
+
+![Interpower slew rate on oscilloscope](i/0226-ip-scope.jpg)
+
+I'm guessing this is the "rail-to-rail" limit of the single-supply op-amps. This means the darkest tones are crushed, but it still looks good on screen.
 
 
+## Non-linearities
 
+The output from the DACs has some non-linearity, in that there are some discontinuities/"bumps" where there should otherwise be a perfect slope. These were seen in simulation and demonstrated in silicon.
 
-## Misc
+*TODO: Images of banding and oscilloscope with Red/Blue channel differences. Put simulation graph snippet beside oscilloscope capture. Speculate that differences can also be due to layout, resistor sizing in Magic, or matching... in some cases maybe even coupling.*
 
-*   Link to the repo
-*   Notes on unmatched buffer cells
+I made sure to save a copy of the original [digital controller block's OpenLane hardening results](https://github.com/algofoogle/tt06-grab-bag/blob/main/openlane/controller/runs-controller-harden-2024-04-20.xz) in the repo. I searched the post-synthesis/layout Verilog netlist for the sky130 standard cells that drive each of the 24 digital colour outputs (that become the DACs' inputs), and found inconsistencies which probably explain some of the non-linearities in the analog output. Here's the raw data:
+
+```
+$ egrep -H -n "X.\b[rgb]\b" ./results/final/verilog/gl/controller.v -B 5 | fgrep -v '.V'
+./results/final/verilog/gl/controller.v-7637- sky130_fd_sc_hd__buf_2 output12 (.A(net12),
+./results/final/verilog/gl/controller.v:7642:    .X(b[0]));
+./results/final/verilog/gl/controller.v-7643- sky130_fd_sc_hd__buf_2 output13 (.A(net13),
+./results/final/verilog/gl/controller.v:7648:    .X(b[1]));
+./results/final/verilog/gl/controller.v-7649- sky130_fd_sc_hd__buf_2 output14 (.A(net14),
+./results/final/verilog/gl/controller.v:7654:    .X(b[2]));
+./results/final/verilog/gl/controller.v-7655- sky130_fd_sc_hd__buf_2 output15 (.A(net15),
+./results/final/verilog/gl/controller.v:7660:    .X(b[3]));
+./results/final/verilog/gl/controller.v-7661- sky130_fd_sc_hd__clkbuf_4 output16 (.A(net16),
+./results/final/verilog/gl/controller.v:7666:    .X(b[4]));
+./results/final/verilog/gl/controller.v-7667- sky130_fd_sc_hd__clkbuf_4 output17 (.A(net17),
+./results/final/verilog/gl/controller.v:7672:    .X(b[5]));
+./results/final/verilog/gl/controller.v-7673- sky130_fd_sc_hd__buf_2 output18 (.A(net18),
+./results/final/verilog/gl/controller.v:7678:    .X(b[6]));
+./results/final/verilog/gl/controller.v-7679- sky130_fd_sc_hd__clkbuf_4 output19 (.A(net19),
+./results/final/verilog/gl/controller.v:7684:    .X(b[7]));
+--
+./results/final/verilog/gl/controller.v-7697- sky130_fd_sc_hd__buf_2 output22 (.A(net22),
+./results/final/verilog/gl/controller.v:7702:    .X(g[0]));
+./results/final/verilog/gl/controller.v-7703- sky130_fd_sc_hd__buf_2 output23 (.A(net23),
+./results/final/verilog/gl/controller.v:7708:    .X(g[1]));
+./results/final/verilog/gl/controller.v-7709- sky130_fd_sc_hd__buf_2 output24 (.A(net24),
+./results/final/verilog/gl/controller.v:7714:    .X(g[2]));
+./results/final/verilog/gl/controller.v-7715- sky130_fd_sc_hd__buf_2 output25 (.A(net25),
+./results/final/verilog/gl/controller.v:7720:    .X(g[3]));
+./results/final/verilog/gl/controller.v-7721- sky130_fd_sc_hd__clkbuf_4 output26 (.A(net26),
+./results/final/verilog/gl/controller.v:7726:    .X(g[4]));
+./results/final/verilog/gl/controller.v-7727- sky130_fd_sc_hd__buf_2 output27 (.A(net27),
+./results/final/verilog/gl/controller.v:7732:    .X(g[5]));
+./results/final/verilog/gl/controller.v-7733- sky130_fd_sc_hd__buf_2 output28 (.A(net28),
+./results/final/verilog/gl/controller.v:7738:    .X(g[6]));
+./results/final/verilog/gl/controller.v-7739- sky130_fd_sc_hd__buf_2 output29 (.A(net29),
+./results/final/verilog/gl/controller.v:7744:    .X(g[7]));
+--
+./results/final/verilog/gl/controller.v-7769- sky130_fd_sc_hd__buf_2 output34 (.A(net34),
+./results/final/verilog/gl/controller.v:7774:    .X(r[0]));
+./results/final/verilog/gl/controller.v-7775- sky130_fd_sc_hd__buf_2 output35 (.A(net35),
+./results/final/verilog/gl/controller.v:7780:    .X(r[1]));
+./results/final/verilog/gl/controller.v-7781- sky130_fd_sc_hd__buf_2 output36 (.A(net36),
+./results/final/verilog/gl/controller.v:7786:    .X(r[2]));
+./results/final/verilog/gl/controller.v-7787- sky130_fd_sc_hd__buf_2 output37 (.A(net37),
+./results/final/verilog/gl/controller.v:7792:    .X(r[3]));
+./results/final/verilog/gl/controller.v-7793- sky130_fd_sc_hd__clkbuf_4 output38 (.A(net38),
+./results/final/verilog/gl/controller.v:7798:    .X(r[4]));
+./results/final/verilog/gl/controller.v-7799- sky130_fd_sc_hd__buf_2 output39 (.A(net39),
+./results/final/verilog/gl/controller.v:7804:    .X(r[5]));
+./results/final/verilog/gl/controller.v-7805- sky130_fd_sc_hd__buf_2 output40 (.A(net40),
+./results/final/verilog/gl/controller.v:7810:    .X(r[6]));
+./results/final/verilog/gl/controller.v-7811- sky130_fd_sc_hd__buf_2 output41 (.A(net41),
+./results/final/verilog/gl/controller.v:7816:    .X(r[7]));
+```
+
+To summarize:
+
+| Red bit | Red buffer | Green bit | Green buffer | Blue bit | Blue buffer |
+|---------|------------|-----------|--------------|----------|-------------|
+| r[0]    | buf_2      | g[0]      | buf_2        | b[0]     | buf_2       |
+| r[1]    | buf_2      | g[1]      | buf_2        | b[1]     | buf_2       |
+| r[2]    | buf_2      | g[2]      | buf_2        | b[2]     | buf_2       |
+| r[3]    | buf_2      | g[3]      | buf_2        | b[3]     | buf_2       |
+| r[4]    |**clkbuf_4**| g[4]      | **clkbuf_4** | b[4]     | **clkbuf_4**|
+| r[5]    | buf_2      | g[5]      | buf_2        | b[5]     | **clkbuf_4**|
+| r[6]    | buf_2      | g[6]      | buf_2        | b[6]     | buf_2       |
+| r[7]    | buf_2      | g[7]      | buf_2        | b[7]     | **clkbuf_4**|
+
+Note that besides different `clkbuf_4` cells in general, the Blue channel in particular is different from Red and Green.
+
+*TODO: Show different cells in GDS.*
+
